Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34017

convertFromGLImage() crashes if the QImage is null

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.2.0
    • 4.8.4, 5.1.0
    • GUI: OpenGL
    • None
    • 9ebd76b0214730bfa184008e0a5b2541827912eb

    Description

      convertFromGLImage() does not check if the QImage passed in is null, due to the size requested being too large to allocate in the calling functions (which also do not check for null).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            jarush Jon Rush
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes