Avoid calling convertFromGLImage on a null image.

Task-number: QTBUG-34017

Change-Id: If51ef4b1f906677e26d14b5a92799097d18ac437
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>